fix topbar not visible mobile

--- a/src/components/ScreenEditor/TopBarButton.module.css
+++ b/src/components/ScreenEditor/TopBarButton.module.css
@@ -1,6 +1,6 @@
 .topBarButton {
     display: inline-block;
-    padding: 8px 16px;
+    padding: 0.6em;
     cursor: pointer;
 }
 
